--- a/.railwayignore
+++ b/.railwayignore
@@ -1,5 +1,10 @@
 frontend/
 node_modules/
+package.json
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .git/
 .gitignore
 README.md
@@ -8,4 +13,6 @@ DEPLOYMENT.md
 __pycache__/
 *.pyc
 .env
-.env.local 
+.env.local
+.npm
+.yarn-integrity 
